--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
-
-  </body>
-</html>
+    <head>
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="./css/main.css">
+        <script src="js/bundle.js"></script>
+    </head>
+    <body>
+    <div class="game-grid-container">
+      <div class="grid-item" id="game-start" >Game Start</div>
+      <div class="grid-item" id="bonus-guess-box">Heading</div>
+      <div class="grid-item" id="game-timer">Timer</div>
+      <div class="grid-item" id="team-one-buzzer">Team 1 Buzzer</div>
+      <div class="grid-item" id="bonus-grid">
+        <div class="inner-game-grid-container">
+          <div class="inner-grid-item" id="grid-1">1</div>
+          <div class="inner-grid-item" id="grid-2">2</div>
+          <div class="inner-grid-item" id="grid-3">3</div>
+          <div class="inner-grid-item" id="grid-4">4</div>
+          <div class="inner-grid-item" id="grid-5">5</div>
+          <div class="inner-grid-item" id="grid-6">6</div>
+          <div class="inner-grid-item" id="grid-7">7</div>
+          <div class="inner-grid-item" id="grid-8">8</div>
+          <div class="inner-grid-item" id="grid-9">9</div>
+        </div>
+      </div>
+      <div class="grid-item" id="team-two-buzzer">Team 2 Buzzer</div>
+      <div class="grid-item" id="team-one-score">Team 1 Score</div>
+      <div class="grid-item" id="question-box">Question Box</div>
+      <div class="grid-item" id="team-two-score">Team 2 Score</div>
+    </div>
+    <script src="./src/app.js">
+      // const box1 = document.querySelector('#inner-box-one');
+      // box1.style.opacity = '0.0';
+    </script>
+    </body>
+    </html>
