Created random questions and answers, populated divs.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,9 +26,16 @@
       </div>
       <div class="grid-item" id="team-two-buzzer">Team 2 Buzzer</div>
       <div class="grid-item" id="team-one-score">Team 1 Score</div>
-      <div class="grid-item" id="question-box">Question Box</div>
+
+      <div class="grid-item" id="question-box">
+        <div id="question-div"></div>
+        <br>
+        <div id="choices-div"></div>
+      </div>
+
       <div class="grid-item" id="team-two-score">Team 2 Score</div>
     </div>
+
     <script src="./src/app.js">
       // const box1 = document.querySelector('#inner-box-one');
       // box1.style.opacity = '0.0';
