--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,7 @@
         <script src="js/bundle.js"></script>
     </head>
     <body>
+      <header></header>
     <div class="game-grid-container">
       <div class="grid-item" id="game-start" >Game Start</div>
       <div class="grid-item" id="bonus-guess-box">Heading</div>
@@ -39,5 +40,6 @@
       <!-- // const box1 = document.querySelector('#inner-box-one');
       // box1.style.opacity = '0.0'; -->
     </script>
+      <footer></footer>
     </body>
     </html>
