resized buzzer button

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,8 @@
       <div class="grid-item" id="game-start" >Game Start</div>
       <div class="grid-item" id="bonus-guess-box">Heading</div>
       <div class="grid-item" id="game-timer">Timer</div>
-      <div class="grid-item" class="team-buzzer" id="team-one-buzzer">
-        <img src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+      <div class="grid-item team-buzzer" id="team-one-buzzer">
+        <img width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
       <div class="grid-item" id="bonus-grid">
         <div class="inner-game-grid-container">
@@ -26,8 +26,8 @@
           <div class="inner-grid-item" id="grid-8">9</div>
         </div>
       </div>
-      <div class="grid-item" class="team-buzzer" id="team-two-buzzer">
-        <img src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+      <div class="grid-item team-buzzer" id="team-two-buzzer">
+        <img width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
       <div class="grid-item" id="team-one-score">Team 1 Score</div>
 
