click_events working

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
       <div class="grid-item" id="bonus-guess-box">Heading</div>
       <div class="grid-item" id="game-timer">Timer</div>
       <div class="grid-item team-buzzer" id="team-one-buzzer">
-        <img width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+        <img id="team1" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
       <div class="grid-item" id="bonus-grid">
         <div class="inner-game-grid-container">
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="grid-item team-buzzer" id="team-two-buzzer">
-        <img width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+        <img id="team2" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
       <div class="grid-item" id="team-one-score">Team 1 Score</div>
 
