--- a/client/public/index.html
+++ b/client/public/index.html
@@ -30,7 +30,7 @@
       <div class="grid-item team-buzzer" id="team-two-buzzer">
         <img id="team2" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
-      <div class="grid-item" id="team-one-score">Team 1 Score</div>
+      <div class="grid-item team-score" id="team-one-score"></div>
 
       <div class="grid-item" id="question-box">
         <div id="question-div"></div>
@@ -38,7 +38,7 @@
         <div id="choices-div"></div>
       </div>
 
-      <div class="grid-item" id="team-two-score">Team 2 Score</div>
+      <div class="grid-item team-score" id="team-two-score"></div>
     </div>
     <!-- <script src="./src/app.js"> -->
       <!-- // const box1 = document.querySelector('#inner-box-one');
