css changes made

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,13 +10,14 @@
     <div class="game-grid-container">
       <div class="" id="game-start" >Game Start</div>
       <div class="title-box" id="bonus-guess-box">
-        <div class="team-score" id="team-one-score"></div>
+        <div class="team-score" id="team1-score"></div>
         <div class="heading" id="heading">Heading</div>
-        <div class="team-score" id="team-two-score"></div>
+        <div class="team-score" id="team2-score"></div>
       </div>
       <div class="" id="game-timer">Timer</div>
-      <div class="team-score" id="team-one-score">
-      </div>
+
+      <div class="team-score"></div>
+
       <div class="" id="bonus-grid">
         <div class="inner-game-grid-container">
           <div class="inner-grid-item" id="grid-0">1</div>
@@ -30,8 +31,9 @@
           <div class="inner-grid-item" id="grid-8">9</div>
         </div>
       </div>
-      <div class="team-score" id="team-two-score">
-      </div>
+
+      <div class="team-score"></div>
+
       <div class="team-buzzer" id="team-one-buzzer">
         <img id="team1" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
