css problems fixed

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -37,7 +37,6 @@
       <div class="team-buzzer" id="team-one-buzzer">
         <img id="team1" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
       </div>
-      <div class="grid-item" id="team1-score"></div>
 
       <div class="" id="question-box">
         <div id="question-div"></div>
@@ -45,7 +44,9 @@
         <div id="choices-div"></div>
       </div>
 
-      <div class="grid-item" id="team2-score"></div>
+      <div class="team-buzzer" id="team-two-buzzer">
+        <img id="team2" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+      </div>
     </div>
     <!-- <script src="./src/app.js"> -->
       <!-- // const box1 = document.querySelector('#inner-box-one');
