--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,12 +6,18 @@
         <script src="js/bundle.js"></script>
     </head>
     <body>
-      <header></header>
+      <header>
+        <img id="title_logo" class="title_logo" width="100" height="auto" src="css/img/IMDbeatdown1.png" />
+      </header>
     <div class="game-grid-container">
-      <div class="" id="game-start" >Game Start</div>
+      <div class="" id="game-start" >
+        <img id="start_button" class="start_button" width="100" height="auto" src="css/img/start_button.png" />
+      </div>
       <div class="title-box" id="bonus-guess-box">
         <div class="team-score" id="team1-score"></div>
-        <div class="heading" id="heading">Heading</div>
+        <div class="heading" id="heading">
+          <img id="vs_logo" class="vs_logo" width="100" height="auto" src="css/img/vs_logo.png" />
+        </div>
         <div class="team-score" id="team2-score"></div>
       </div>
       <div class="" id="game-timer">Timer</div>
@@ -35,7 +41,7 @@
       <div class="team-score"></div>
 
       <div class="team-buzzer" id="team-one-buzzer">
-        <img id="team1" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+        <img class="team-buzzer_one" id="team1" width="100" height="auto" src="css/img/team_one_button.png" />
       </div>
 
       <div class="" id="question-box">
@@ -45,7 +51,7 @@
       </div>
 
       <div class="team-buzzer" id="team-two-buzzer">
-        <img id="team2" width="100" height="auto" src = "https://images-eu.ssl-images-amazon.com/images/I/41lGS2XvG7L.png" />
+        <img class="team-buzzer_two" id="team1" width="100" height="auto" src="css/img/team_two_button.png" />
       </div>
     </div>
     <!-- <script src="./src/app.js"> -->
