--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,15 +26,15 @@
 
       <div class="" id="bonus-grid">
         <div class="inner-game-grid-container">
-          <div class="inner-grid-item" id="grid-0"><img src="./css/img/clipart1.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-1"><img src="./css/img/clipart2.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-2"><img src="./css/img/clipart2.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-3"><img src="./css/img/clipart3.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-4"><img src="./css/img/clipart4.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-5"><img src="./css/img/clipart5.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-6"><img src="./css/img/clipart6.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-7"><img src="./css/img/clipart8.png" alt=""></div>
-          <div class="inner-grid-item" id="grid-8"><img src="./css/img/clipart9.png" alt=""></div>
+          <div class="inner-grid-item" id="grid-0"><img src="./css/img/clipart1.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-1"><img src="./css/img/clipart2.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-2"><img src="./css/img/clipart2.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-3"><img src="./css/img/clipart3.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-4"><img src="./css/img/clipart4.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-5"><img src="./css/img/clipart5.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-6"><img src="./css/img/clipart6.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-7"><img src="./css/img/clipart8.png" alt="" height="95" width="120"></div>
+          <div class="inner-grid-item" id="grid-8"><img src="./css/img/clipart9.png" alt="" height="95" width="120"></div>
         </div>
       </div>
 
