Added button effect.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="team-score" id="team2-score"></div>
       </div>
-      <div class="" id="game-timer">Timer</div>
+      <div class="" id="game-timer"></div>
 
       <div class="team-score"></div>
 
